[gd_scene load_steps=5 format=3 uid="uid://dl523jbn2736l"]

[ext_resource type="Script" path="res://scenes/menus/upgrade_container.gd" id="1_bbdou"]
[ext_resource type="Texture2D" uid="uid://ccfqweuj2rhp" path="res://assets/items/water_bottle.png" id="1_v0qmh"]
[ext_resource type="Texture2D" uid="uid://bf33gsg3tjp5p" path="res://assets/characters/collector_icon.png" id="2_wv1nv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6aaim"]
bg_color = Color(0.447059, 0.67451, 0.6, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.556863, 0.8, 0.694118, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.27451)
shadow_size = 2
shadow_offset = Vector2(1, 2)

[node name="UpgradeContainer" type="HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
theme_override_constants/separation = 12
alignment = 1
script = ExtResource("1_bbdou")

[node name="PurchaseButton" type="Button" parent="."]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_6aaim")
text = " Collectors +1 "

[node name="CostContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="CostLabel" type="Label" parent="CostContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "COST: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="CostTexture" type="TextureRect" parent="CostContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_v0qmh")
expand_mode = 5
stretch_mode = 4

[node name="Price" type="Label" parent="CostContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="UpgradeTexture" type="TextureRect" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_wv1nv")
expand_mode = 4
stretch_mode = 3

[node name="UpgradeNumber" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[connection signal="pressed" from="PurchaseButton" to="." method="_on_purchase_button_pressed"]
